css/style.css
:root {
  --nav-blue: #19C3FB;
  --yellow: #FFCD00;
  --cream: #FFFAE0;
  --gray: #E3F4FE;
  --dark-blue: #1D71F2;
  --blue: #1C9CF6;
  --standard: 1px solid var(--yellow);
}

html {
  font-family: 'Quicksand',Helvetica,sans-serif;
  font-size: 1.5rem;
  line-height: 1.25rem;
  box-sizing: border-box;
  background-color: var(--dark-blue);
}

nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  color: var(--cream);
  background-color: var(--nav-blue);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  padding-left: 0.5rem;
}

.input-and-temp {
  display: flex;
  flex-direction: column;
}

.temp-slider {
  margin-top: 5px;
}

.user-input {
  background-color: var(--nav-blue);
  color: var(--yellow);
  border: none;
  border-bottom: var(--standard);
}

.user-input:focus {
  border: none;
  border-bottom: var(--standard);
  outline: none;
}

.search-btn {
  border-radius: 1rem;
  box-shadow: none;
  background-color: var(--yellow);
  color: var(--dark-blue);
  border: var(--standard);
}

.search-btn:hover {
  background-color: var(--dark-blue);
  color: var(--yellow);
}

.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 25px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 17px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

section {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 5rem;
  margin-bottom: 2.5rem;
}

.city-temp {
  display: flex;
  color: var(--yellow);
}

.weather-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.current-container {
  display: flex;
  flex-direction: column;
  background-color: var(--blue);
  width: 40%;
  min-width: 320px;
  border: var(--standard);
  color: var(--cream);
}

.flex-container > span {
  margin: auto 20px;
}

.flex-container {
  display: flex;
  max-width: 100%;
  min-width: 250px;
  justify-content: space-between;
}

.forecast-container {
  display: flex;
  margin-top: 1rem;
  flex-wrap: wrap;
  justify-content: center;
}

.forecast-card {
  margin: 5px;
  display: flex;
  width: 150px;
  flex-wrap: wrap;
  flex-direction: column;
  background-color: var(--blue);
  color: var(--cream);
  border: var(--standard);
}

.forecast-card > span {
  padding-left: 5px;
}

h4 {
  color: var(--yellow);
  margin: 0.25rem 0;
  padding: 5px;
}

.weather-pic {
  width: 100px;
  margin: 0 auto;
}

footer {
  position: fixed;
  height: 25px;
  text-align: center;
  font-size: 20px;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: var(--nav-blue);
  color: var(--cream);
}

